--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           </div>
 
           <div class="resume-content mr-auto">
-            <h3 class="mb-0 activity-text">Organizou</h3>
+            <h3 class="mb-0 activity-text">Worked on</h3>
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
