add lectures in extra activity

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
-            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>FliSol - Pau dos Ferros</p>
+            <h5 class="mb-0">Configurando seu ambiente Python</h5>
+            <p>#1 Meetup GruPy-RN - IMD Natal-RN</p>
 
             <h5 class="mb-0">O desafio de levar a filosofia do Software Livre <br> para o interior do Rio Grande do Norte</h3>
             <p>Campus Party Natal</p>
@@ -309,6 +309,9 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
+            <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+            <p>Arduino Day - UFRN</p>
+
               <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
               <p>Arduino Day - UFRN</p>
 
