add #1 Meetup do Gruy-RN in wordked on

--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
+              <h5>#1 Meetup do GruPy-RN</h5>
               <h5>1°Encontro PotiLivre do Oeste - Mossoró</h5>
               <h5>FliSol - Natal</h5>
           </div>
