update extra activity

--- a/index.html
+++ b/index.html
@@ -258,6 +258,19 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
+
+            <h5 class="mb-0">Apresentação do Grupy-RN Check-in</h5>
+            <p>#3 Meetup GruPy-RN - Sebrae Natal-RN</p>
+
+            <h5 class="mb-0">Comunidades Everywhere</h5>
+            <p>UPGRADE - IMD-UFRN</p>
+
+            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+            <p>1°Meetup PotiLivre Mossoró - UERN</p>
+
+            <h5 class="mb-0">Criando documentação com MkDocs</h5>
+            <p>#2 Meetup GruPy-RN - IMD Natal-RN</p>
+
             <h5 class="mb-0">Configurando seu ambiente Python</h5>
             <p>#1 Meetup GruPy-RN - IMD Natal-RN</p>
 
@@ -265,7 +278,7 @@
             <p>Campus Party Natal</p>
 
             <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>1°Encontro PotiLivre do Oeste - Mossoró</p>
+            <p>1°Encontro PotiLivre do Oeste - UFERSA</p>
           </div>
 
           <div class="resume-content mr-auto">
@@ -309,8 +322,15 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
-            <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
-            <p>Arduino Day - UFRN</p>
+
+              <h5 class="mb-0">Git e GitHub </h5>
+              <p>UPGRADE - IMD-UFRN</p>
+
+              <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+              <p>1°Meetup PotiLivre Mossoró - UERN</p>
+
+              <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+              <p>Arduino Day - UFRN</p>
 
               <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
               <p>Arduino Day - UFRN</p>
@@ -345,6 +365,9 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
+              <h5>#3 Meetup do GruPy-RN</h5>
+              <h5>1° Meetup PotiLivre Mossoró</h5>
+              <h5>#2 Meetup do GruPy-RN</h5>
               <h5>#1 Meetup do GruPy-RN</h5>
               <h5>1°Encontro PotiLivre do Oeste - Mossoró</h5>
               <h5>FliSol - Natal</h5>
