change IMD to IMD-UFRN

--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
             <p>1°Meetup PotiLivre Mossoró - UERN</p>
 
             <h5 class="mb-0">Criando documentação com MkDocs</h5>
-            <p>#2 Meetup GruPy-RN - IMD Natal-RN</p>
+            <p>#2 Meetup GruPy-RN - IMD-UFRN</p>
 
             <h5 class="mb-0">Configurando seu ambiente Python</h5>
-            <p>#1 Meetup GruPy-RN - IMD Natal-RN</p>
+            <p>#1 Meetup GruPy-RN - IMD-UFRN</p>
 
             <h5 class="mb-0">O desafio de levar a filosofia do Software Livre <br> para o interior do Rio Grande do Norte</h3>
             <p>Campus Party Natal</p>
@@ -299,7 +299,7 @@
             <p>IV Workshop de Engenharia e TI da Unp</p>
 
             <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
-            <p>Festival Latino-Americao de Instalação de Software Livre - IMD Natal-RN</p>
+            <p>Festival Latino-Americao de Instalação de Software Livre - IMD-UFRN</p>
           </div>
 
           <div class="resume-content mr-auto">
@@ -313,7 +313,7 @@
             <p>Amostra de TCC da Unp</p>
 
             <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
-            <p>Software Freedom Day - IMD Natal-RN</p>
+            <p>Software Freedom Day - IMD-UFRN</p>
 
           </div>
 
@@ -347,7 +347,7 @@
               <span class="text-primary"> Year 2017</span>
             </div>
             <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
-            <p>Conferência Potiguar de Software Livre - IMD</p>
+            <p>Conferência Potiguar de Software Livre - IMD-UFRN</p>
 
             <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
             <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
