--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">Brazil, Natal-RN ·
             <a href="mailto:allythy@protonmail.com">allythy@protonmail.com</a>
           </div>
-          <p class="mb-5">Enthusiast of the Free Software movement and programming student. I am a Debian collaborator, coordinator of the Free Software user group of Rio Grande do Norte, PotiLivre, author / collaborator of the site SiempreUpdate, founder and collaborator of PHP-RN, coordinator of GruPy-RN. Always looking for the best way to share knowledge.</p>
+          <p class="mb-5">Graduated in Information Technology Management. Debian Project contributor. Former collaborator of the SempreUpdate, in which I authored for a period of 2 years. Coordinator of PotiLivre (Potiguar Community of Free Software). Coordinator of GruPy-RN. Founder and coordinator of PHP-RN.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://github.com/allythy" target="_blank">
@@ -127,7 +127,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Scholarship holder - Computer instructor</h3>
+              <h3 class="mb-0">Scholarship holder - Computer instructor(Voluntary)</h3>
               <div class="subheading mb-3">Cedaspy</div>
             </div>
             <div class="resume-date text-md-right">
@@ -202,13 +202,22 @@
               <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicons devicons-django"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-php"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mysql"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-gnu"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-debian"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-docker"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-terminal"></i>
@@ -255,11 +264,25 @@
 
           <div class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Lectures</h3>
+
+            <div class="resume-date text-md-right">
+              <span class="text-primary "> Year 2019</span>
+            </div>
+
+            <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
+            <p>Campus Party Brasil #13</p>
+
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
 
-            <h5 class="mb-0">Apresentação do Grupy-RN Check-in</h5>
+            <h5 class="mb-0">O casamento sagrado entre o Pipfile, pip e Virtualenv</h5>
+            <p>Python Brasil[14]</p>
+
+            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+            <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
+
+            <h5 class="mb-0">Apresentação do sistema Check-in do Grupy-RN</h5>
             <p>#3 Meetup GruPy-RN - Sebrae Natal-RN</p>
 
             <h5 class="mb-0">Comunidades Everywhere</h5>
@@ -279,9 +302,7 @@
 
             <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
             <p>1°Encontro PotiLivre do Oeste - UFERSA</p>
-          </div>
 
-          <div class="resume-content mr-auto">
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2017</span>
             </div>
@@ -300,12 +321,11 @@
 
             <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
             <p>Festival Latino-Americao de Instalação de Software Livre - IMD-UFRN</p>
-          </div>
 
-          <div class="resume-content mr-auto">
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2016</span>
             </div>
+
             <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
             <p>IFRN-Zona Norte</p>
 
@@ -314,7 +334,6 @@
 
             <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
             <p>Software Freedom Day - IMD-UFRN</p>
-
           </div>
 
           <div class="resume-content mr-auto">
@@ -323,7 +342,10 @@
               <span class="text-primary"> Year 2018</span>
             </div>
 
-              <h5 class="mb-0">Git e GitHub </h5>
+              <h5 class="mb-0">Introdução ao Git e GitHub</h5>
+              <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
+
+              <h5 class="mb-0">Introdução ao Git e GitHub</h5>
               <p>UPGRADE - IMD-UFRN</p>
 
               <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
@@ -340,24 +362,22 @@
 
               <h5 class="mb-0">Git e GitHub </h5>
               <p>1°Encontro PotiLivre do Oeste - Mossoró</p>
-          </div>
 
-          <div class="resume-content mr-auto">
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2017</span>
-            </div>
-            <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
-            <p>Conferência Potiguar de Software Livre - IMD-UFRN</p>
+              <div class="resume-date text-md-right">
+                <span class="text-primary"> Year 2017</span>
+              </div>
 
-            <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
-            <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
+              <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
+              <p>Conferência Potiguar de Software Livre - IMD-UFRN</p>
 
-            <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
-            <p>IV Workshop de Engenharia e TI da Unp</p>
+              <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
+              <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
 
-            <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
-            <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p
+              <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
+              <p>IV Workshop de Engenharia e TI da Unp</p>
 
+              <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
+              <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p>
           </div>
 
           <div class="resume-content mr-auto">
@@ -365,33 +385,36 @@
             <div class="resume-date text-md-right">
               <span class="text-primary"> Year 2018</span>
             </div>
+              <h5>PYTHON DAY NATAL</h5>
+              <h5>A 3ª Conferência Potiguar de Software Livre, PotiCon</h5>
+              <h5>Software Freedom Day - Natal-RN</h5>
+              <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
               <h5>#3 Meetup do GruPy-RN</h5>
               <h5>1° Meetup PotiLivre Mossoró</h5>
               <h5>#2 Meetup do GruPy-RN</h5>
               <h5>#1 Meetup do GruPy-RN</h5>
               <h5>1°Encontro PotiLivre do Oeste - Mossoró</h5>
               <h5>FliSol - Natal</h5>
+
+              <div class="resume-date text-md-right">
+                <span class="text-primary"> Year 2017</span>
+              </div>
+
+              <h5 class="mb-0">Python Day Natal</h5>
+              <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
+              <h5 class="mb-0">Software Freedom Day Natal</h5>
+              <h5 class="mb-0">Debian Day Natal</h5>
+              <h5>Festival Latino-Americao de Instalação de Software Livre Natal</h5>
+
+              <div class="resume-date text-md-right">
+                <span class="text-primary"> Year 2016</span>
+              </div>
+
+              <h5 class="mb-0">Python Day Natal</h5>
+              <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
+              <h5 class="mb-0">Software Freedom Day Natal</h5>
           </div>
 
-          <div class="resume-content mr-auto">
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2017</span>
-            </div>
-            <h5 class="mb-0">Python Day Natal</h5>
-            <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
-            <h5 class="mb-0">Software Freedom Day Natal</h5>
-            <h5 class="mb-0">Debian Day Natal</h5>
-            <h5>Festival Latino-Americao de Instalação de Software Livre Natal</h5>
-          </div>
-
-          <div class="resume-content mr-auto">
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2016</span>
-            </div>
-            <h5 class="mb-0">Python Day Natal</h5>
-            <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
-            <h5 class="mb-0">Software Freedom Day Natal</h5>
-          </div>
         </div>
       </section>
 
