updating the HTML structure

--- a/index.html
+++ b/index.html
@@ -262,159 +262,176 @@
         <div class="my-auto">
           <h2 class="mb-5">Extra Activity</h2>
 
-          <div class="resume-content mr-auto">
+          <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Lectures</h3>
 
-            <div class="resume-date text-md-right">
-              <span class="text-primary "> Year 2019</span>
-            </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary "> Year 2019</span>
+                </div>
 
-            <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
-            <p>Campus Party Brasil #13</p>
+                <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
+                <p>Campus Party Brasil #13</p>
+            </section>
 
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2018</span>
-            </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2018</span>
+                </div>
 
-            <h5 class="mb-0">O casamento sagrado entre o Pipfile, pip e Virtualenv</h5>
-            <p>Python Brasil[14]</p>
+                <h5 class="mb-0">O casamento sagrado entre o Pipfile, pip e Virtualenv</h5>
+                <p>Python Brasil[14]</p>
 
-            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
+                <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+                <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
 
-            <h5 class="mb-0">Apresentação do sistema Check-in do Grupy-RN</h5>
-            <p>#3 Meetup GruPy-RN - Sebrae Natal-RN</p>
+                <h5 class="mb-0">Apresentação do sistema Check-in do Grupy-RN</h5>
+                <p>#3 Meetup GruPy-RN - Sebrae Natal-RN</p>
 
-            <h5 class="mb-0">Comunidades Everywhere</h5>
-            <p>UPGRADE - IMD-UFRN</p>
+                <h5 class="mb-0">Comunidades Everywhere</h5>
+                <p>UPGRADE - IMD-UFRN</p>
 
-            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>1°Meetup PotiLivre Mossoró - UERN</p>
+                <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+                <p>1°Meetup PotiLivre Mossoró - UERN</p>
 
-            <h5 class="mb-0">Criando documentação com MkDocs</h5>
-            <p>#2 Meetup GruPy-RN - IMD-UFRN</p>
+                <h5 class="mb-0">Criando documentação com MkDocs</h5>
+                <p>#2 Meetup GruPy-RN - IMD-UFRN</p>
 
-            <h5 class="mb-0">Configurando seu ambiente Python</h5>
-            <p>#1 Meetup GruPy-RN - IMD-UFRN</p>
+                <h5 class="mb-0">Configurando seu ambiente Python</h5>
+                <p>#1 Meetup GruPy-RN - IMD-UFRN</p>
 
-            <h5 class="mb-0">O desafio de levar a filosofia do Software Livre <br> para o interior do Rio Grande do Norte</h3>
-            <p>Campus Party Natal</p>
+                <h5 class="mb-0">O desafio de levar a filosofia do Software Livre <br> para o interior do Rio Grande do Norte</h3>
+                <p>Campus Party Natal</p>
 
-            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>1°Encontro PotiLivre do Oeste - UFERSA</p>
+                <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+                <p>1°Encontro PotiLivre do Oeste - UFERSA</p>
+            </section>
 
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2017</span>
-            </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2017</span>
+                </div>
 
-            <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
-            <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
+                <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+                <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
-            <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
+                <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
-            <p>Software Freedom Day - UNI-RN</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
+                <p>Software Freedom Day - UNI-RN</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
-            <p>IV Workshop de Engenharia e TI da Unp</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
+                <p>IV Workshop de Engenharia e TI da Unp</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
-            <p>Festival Latino-Americao de Instalação de Software Livre - IMD-UFRN</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
+                <p>Festival Latino-Americao de Instalação de Software Livre - IMD-UFRN</p>
+            </section>
 
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2016</span>
-            </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2016</span>
+                </div>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
-            <p>IFRN-Zona Norte</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
+                <p>IFRN-Zona Norte</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
-            <p>Amostra de TCC da Unp</p>
+                <h5 class="mb-0">Afinal de contas,o que é o Debian ?</h5>
+                <p>Amostra de TCC da Unp</p>
 
-            <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
-            <p>Software Freedom Day - IMD-UFRN</p>
-          </div>
+                <h5 class="mb-0">Afinal de contas,o que é o Software Livre ?</h5>
+                <p>Software Freedom Day - IMD-UFRN</p>
+            </section>
+          </article>
 
-          <div class="resume-content mr-auto">
+          <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Short Courses</h3>
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2018</span>
-            </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2018</span>
+                </div>
 
-              <h5 class="mb-0">Introdução ao Git e GitHub</h5>
-              <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
+                  <h5 class="mb-0">Introdução ao Git e GitHub</h5>
+                  <p>2° Encontro PotiLivre - UFERSA-Angicos-RN</p>
 
-              <h5 class="mb-0">Introdução ao Git e GitHub</h5>
-              <p>UPGRADE - IMD-UFRN</p>
+                  <h5 class="mb-0">Introdução ao Git e GitHub</h5>
+                  <p>UPGRADE - IMD-UFRN</p>
 
-              <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
-              <p>1°Meetup PotiLivre Mossoró - UERN</p>
+                  <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+                  <p>1°Meetup PotiLivre Mossoró - UERN</p>
 
-              <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
-              <p>Arduino Day - UFRN</p>
+                  <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+                  <p>Arduino Day - UFRN</p>
 
-              <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
-              <p>Arduino Day - UFRN</p>
+                  <h5 class="mb-0">Linha de comando básico do Sistema GNU </h5>
+                  <p>Arduino Day - UFRN</p>
 
-              <h5 class="mb-0">Git e GitHub </h5>
-              <p>FliSol - Pau dos Ferros</p>
+                  <h5 class="mb-0">Git e GitHub </h5>
+                  <p>FliSol - Pau dos Ferros</p>
 
-              <h5 class="mb-0">Git e GitHub </h5>
-              <p>1°Encontro PotiLivre do Oeste - Mossoró</p>
+                  <h5 class="mb-0">Git e GitHub </h5>
+                  <p>1°Encontro PotiLivre do Oeste - Mossoró</p>
+            </section>
 
-              <div class="resume-date text-md-right">
-                <span class="text-primary"> Year 2017</span>
-              </div>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2017</span>
+                </div>
 
-              <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
-              <p>Conferência Potiguar de Software Livre - IMD-UFRN</p>
+                <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
+                <p>Conferência Potiguar de Software Livre - IMD-UFRN</p>
 
-              <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
-              <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
+                <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
+                <p>Semana de Engenharia de Software e Ciência da Computação - UFC</p>
 
-              <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
-              <p>IV Workshop de Engenharia e TI da Unp</p>
+                <h5 class="mb-0">Linha de comando do Sistema GNU ao Python</h5>
+                <p>IV Workshop de Engenharia e TI da Unp</p>
 
-              <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
-              <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p>
-          </div>
+                <h5 class="mb-0">Linha de comando básico do Sistema GNU</h5>
+                <p>IV Semana de Ciência e Tecnologia do IFRN Campus Parnamirim</p>
+            </section>
+        </article>
 
-          <div class="resume-content mr-auto">
+          <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Worked on</h3>
-            <div class="resume-date text-md-right">
-              <span class="text-primary"> Year 2018</span>
-            </div>
-              <h5>PYTHON DAY NATAL</h5>
-              <h5>A 3ª Conferência Potiguar de Software Livre, PotiCon</h5>
-              <h5>Software Freedom Day - Natal-RN</h5>
-              <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
-              <h5>#3 Meetup do GruPy-RN</h5>
-              <h5>1° Meetup PotiLivre Mossoró</h5>
-              <h5>#2 Meetup do GruPy-RN</h5>
-              <h5>#1 Meetup do GruPy-RN</h5>
-              <h5>1°Encontro PotiLivre do Oeste - Mossoró</h5>
-              <h5>FliSol - Natal</h5>
+            <section>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary"> Year 2018</span>
+                </div>
+                  <h5>PYTHON DAY NATAL</h5>
+                  <h5>A 3ª Conferência Potiguar de Software Livre, PotiCon</h5>
+                  <h5>Software Freedom Day - Natal-RN</h5>
+                  <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
+                  <h5>#3 Meetup do GruPy-RN</h5>
+                  <h5>1° Meetup PotiLivre Mossoró</h5>
+                  <h5>#2 Meetup do GruPy-RN</h5>
+                  <h5>#1 Meetup do GruPy-RN</h5>
+                  <h5>1°Encontro PotiLivre do Oeste - Mossoró</h5>
+                  <h5>FliSol - Natal</h5>
+            </section>
 
-              <div class="resume-date text-md-right">
-                <span class="text-primary"> Year 2017</span>
-              </div>
+              <section>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary"> Year 2017</span>
+                  </div>
 
-              <h5 class="mb-0">Python Day Natal</h5>
-              <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
-              <h5 class="mb-0">Software Freedom Day Natal</h5>
-              <h5 class="mb-0">Debian Day Natal</h5>
-              <h5>Festival Latino-Americao de Instalação de Software Livre Natal</h5>
+                  <h5 class="mb-0">Python Day Natal</h5>
+                  <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
+                  <h5 class="mb-0">Software Freedom Day Natal</h5>
+                  <h5 class="mb-0">Debian Day Natal</h5>
+                  <h5>Festival Latino-Americao de Instalação de Software Livre Natal</h5>
+              </section>
 
-              <div class="resume-date text-md-right">
-                <span class="text-primary"> Year 2016</span>
-              </div>
+              <section>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary"> Year 2016</span>
+                  </div>
 
-              <h5 class="mb-0">Python Day Natal</h5>
-              <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
-              <h5 class="mb-0">Software Freedom Day Natal</h5>
-          </div>
-
+                  <h5 class="mb-0">Python Day Natal</h5>
+                  <h5 class="mb-0">Conferência Potiguar de Software Livre, PotiCon</h5>
+                  <h5 class="mb-0">Software Freedom Day Natal</h5>
+              </section>
+          </article>
         </div>
       </section>
 
