--- a/index.html
+++ b/index.html
@@ -105,32 +105,32 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">SAPE - Secretária de Agricultura Pecuária e Pesca</div>
+              <div class="subheading">SAPE - Secretária de Agricultura Pecuária e Pesca</div>
             </div>
-            <div class="resume-date text-md-right">
+            <div class="resume-date">
               <span class="text-primary">October 2017 - December 2017</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CTO </h3>
-              <div class="subheading mb-3">Startup Educador do Futuro</div>
+              <div class="subheading">Startup Educador do Futuro</div>
             </div>
-            <div class="resume-date text-md-right">
+            <div class="resume-date">
               <span class="text-primary">January 2016 - December 2017</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Scholarship holder - Computer instructor(Voluntary)</h3>
-              <div class="subheading mb-3">Cedaspy</div>
+              <div class="subheading">Cedaspy</div>
             </div>
-            <div class="resume-date text-md-right">
+            <div class="resume-date">
               <span class="text-primary">December 2010 - December 2011</span>
             </div>
           </div>
@@ -143,12 +143,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">UnP - Universidade Potiguar</h3>
-              <div class="subheading mb-3">Information Technology Management</div>
+              <div class="subheading">Information Technology Management</div>
             </div>
-            <div class="resume-date text-md-right">
+            <div class="resume-date">
               <span class="text-primary">February 2016 - Present</span>
             </div>
           </div>
@@ -266,7 +266,7 @@
             <h3 class="mb-0 activity-text">Lectures</h3>
 
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary "> Year 2019</span>
                 </div>
 
@@ -275,7 +275,7 @@
             </section>
 
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2018</span>
                 </div>
 
@@ -308,7 +308,7 @@
             </section>
 
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2017</span>
                 </div>
 
@@ -329,7 +329,7 @@
             </section>
 
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2016</span>
                 </div>
 
@@ -347,7 +347,7 @@
           <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Short Courses</h3>
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2018</span>
                 </div>
 
@@ -374,7 +374,7 @@
             </section>
 
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2017</span>
                 </div>
 
@@ -395,7 +395,7 @@
           <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Worked on</h3>
             <section>
-                <div class="resume-date text-md-right">
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2018</span>
                 </div>
                   <h5>PYTHON DAY NATAL</h5>
@@ -411,7 +411,7 @@
             </section>
 
               <section>
-                  <div class="resume-date text-md-right">
+                  <div class="resume-date year-margin">
                     <span class="text-primary"> Year 2017</span>
                   </div>
 
@@ -423,7 +423,7 @@
               </section>
 
               <section>
-                  <div class="resume-date text-md-right">
+                  <div class="resume-date year-margin">
                     <span class="text-primary"> Year 2016</span>
                   </div>
 
