--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
                 <h5 class="mb-0">Apresentação do sistema Check-in do Grupy-RN</h5>
                 <p>#3 Meetup GruPy-RN - Sebrae Natal-RN</p>
 
+                <h5 class="mb-0">Criando documentação com MkDocs</h5>
+                <p>U6ª edição Network Professionals Meeting</p>
+
                 <h5 class="mb-0">Comunidades Everywhere</h5>
                 <p>UPGRADE - IMD-UFRN</p>
 
