--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading">SAPE - Secretária de Agricultura Pecuária e Pesca</div>
+              <div class="subheading">SETUP - Secretaria de Turismo do Rio de Grande do Norte</div>
             </div>
             <div class="resume-date">
               <span class="text-primary">October 2017 - December 2017</span>
