--- a/index.html
+++ b/index.html
@@ -399,9 +399,17 @@
             <h3 class="mb-0 activity-text">Worked on</h3>
             <section>
                 <div class="resume-date year-margin">
+                  <span class="text-primary"> Year 2019</span>
+                </div>
+                  <h5>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian</h5>
+                  <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
+                  <h5>FliSol - Natal</h5>
+                  <h5>3° Encontro PotiLivre em Caraúbas</h5>
+            </section>
+            <section>
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2018</span>
                 </div>
-                  <h5>PYTHON DAY NATAL</h5>
                   <h5>A 3ª Conferência Potiguar de Software Livre, PotiCon</h5>
                   <h5>Software Freedom Day - Natal-RN</h5>
                   <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
