Updating information Short Courses

--- a/index.html
+++ b/index.html
@@ -351,6 +351,21 @@
             <h3 class="mb-0 activity-text">Short Courses</h3>
             <section>
                 <div class="resume-date year-margin">
+                  <span class="text-primary"> Year 2019</span>
+                </div>
+
+                  <h5 class="mb-0">Introdução ao Git e GitLab</h5>
+                  <p>DebConf19 - Curtitiba</p>
+
+                  <h5 class="mb-0">Introdução ao Mundo Python</h5>
+                  <p>Turma de Engenharia Elétrica - UFRN</p>
+
+                  <h5 class="mb-0">Introdução ao Git e GitHub</h5>
+                  <p>3° Encontro PotiLivre - UFERSA-Caraúbas-RN</p>
+            </section>
+
+            <section>
+                <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2018</span>
                 </div>
 
