Updating information Lectures

--- a/index.html
+++ b/index.html
@@ -271,7 +271,26 @@
                 </div>
 
                 <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
+                <p>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian - Curtitiba</p>
+
+                <h5 class="mb-0">Criando uma Command Line Interface(CLI) com Click</h5>
+                <p>4º MeetUp do GruPy - RN Mossoró</p>
+
+                <h5 class="mb-0">O que Software Livre e a comunidade PotiLivre</h5>
+                <p>Festival Latino-Americao de Instalação de Software Livre - IFRN</p>
+
+                <h5 class="mb-0">Mesa redonda: Comunidades, Python e educação</h5>
+                <p>Startup Day - SEBRAE-RN</p>
+
+                <h5 class="mb-0">Entre no bloco do Python</h5>
+                <p>8º Meetup GruPy-RN</p>
+
+                <h5 class="mb-0">O que é Software Livre e a comunidade PotiLivre</h5>
+                <p>3° Encontro PotiLivre - UFERSA-Caraúbas-RN</p>
+
+                <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
                 <p>Campus Party Brasil #13</p>
+
             </section>
 
             <section>
@@ -353,9 +372,8 @@
                 <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2019</span>
                 </div>
-
                   <h5 class="mb-0">Introdução ao Git e GitLab</h5>
-                  <p>DebConf19 - Curtitiba</p>
+                  <p>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian - Curtitiba</p>
 
                   <h5 class="mb-0">Introdução ao Mundo Python</h5>
                   <p>Turma de Engenharia Elétrica - UFRN</p>
