Updating Short Courses

--- a/index.html
+++ b/index.html
@@ -372,6 +372,9 @@
                 <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2019</span>
                 </div>
+                  <h5 class="mb-0">Introdução ao versionamento com Git e GitLab</h5>
+                  <p>Campus Party Góias</p>
+
                   <h5 class="mb-0">Introdução ao Git e GitLab</h5>
                   <p>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian - Curtitiba</p>
 
