Updating info: Lectures, Short Courses, Worked on

--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@
                 </div>
 
                 <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
+                <p>INFOTIME - IFRN Campus Ceará-Mirim</p>
+
+                <h5 class="mb-0">Git e GitLab para equipes e contribuição em projetos de Software Livre</h5>
+                <p>PHPeste - Recife</p>
+
+                <h5 class="mb-0">Afinal de contas, o que é o Debian?</h5>
+                <p>Debian Day - Natal</p>
+
+                <h5 class="mb-0">Git e GitLab para equipes e contribuição em projetos de software livre</h5>
+                <p>Campus Party Natal - CPNatal2</p>
+
+                <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
                 <p>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian - Curtitiba</p>
 
                 <h5 class="mb-0">Criando uma Command Line Interface(CLI) com Click</h5>
@@ -372,6 +384,10 @@
                 <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2019</span>
                 </div>
+
+                  <h5 class="mb-0">Introdução ao versionamento com Git e GitLab</h5>
+                  <p>INFOTIME - IFRN Campus Ceará-Mirim</p>
+                  
                   <h5 class="mb-0">Introdução ao versionamento com Git e GitLab</h5>
                   <p>Campus Party Góias</p>
 
@@ -437,6 +453,8 @@
                 <div class="resume-date year-margin">
                   <span class="text-primary"> Year 2019</span>
                 </div>
+                  <h5>Python Day Natal</h5>
+                  <h5>Software Freedom Day - Natal-RN</h5>
                   <h5>DebConf19 - Conferência mundial de desenvolvedores(as) do Projeto Debian</h5>
                   <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
                   <h5>FliSol - Natal</h5>
@@ -447,6 +465,7 @@
                   <span class="text-primary"> Year 2018</span>
                 </div>
                   <h5>A 3ª Conferência Potiguar de Software Livre, PotiCon</h5>
+                  <h5>Python Day Natal</h5>
                   <h5>Software Freedom Day - Natal-RN</h5>
                   <h5>2° Encontro PotiLivre - UFERSA-Angicos-RN</h5>
                   <h5>#3 Meetup do GruPy-RN</h5>
