--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Activity">Extra Activity</a>
+            <a class="nav-link js-scroll-trigger" href="#Activity">Talks</a>
           </li>
         </ul>
       </div>
@@ -104,6 +104,26 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading">CDA - Central de Distruição Azevedo</div>
+            </div>
+            <div class="resume-date">
+              <span class="text-primary">2020 - 2021</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-column mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Data Team</h3>
+              <div class="subheading">Deeper System</div>
+            </div>
+            <div class="resume-date">
+              <span class="text-primary">2019 - 2020</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-column mb-5">
             <div class="resume-content mr-auto">
@@ -205,7 +225,10 @@
               <i class="devicons devicons-django"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-php"></i>
+              <i class="devicons devicons-react"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-react-native"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-mysql"></i>
@@ -229,15 +252,6 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
           </ul>
         </div>
       </section>
@@ -260,7 +274,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Activity">
         <div class="my-auto">
-          <h2 class="mb-5">Extra Activity</h2>
+          <h2 class="mb-5">Talks</h2>
 
           <article class="resume-content mr-auto">
             <h3 class="mb-0 activity-text">Lectures</h3>
@@ -269,6 +283,9 @@
                 <div class="resume-date year-margin">
                   <span class="text-primary "> Year 2019</span>
                 </div>
+
+                <h5 class="mb-0">Introdução ao Git e GitHub</h5>
+                <p> Campus Party Góias </p>
 
                 <h5 class="mb-0">Comunidades: o bom, o ruim e o maravilhoso</h5>
                 <p>INFOTIME - IFRN Campus Ceará-Mirim</p>
